Update - Need icons

--- a/index.html
+++ b/index.html
@@ -26,19 +26,9 @@
                     </ul>
                 </section>
 
-                <!-- Projects -->
-                <section>
-                    <h2 class="project_header">Projects</h2>
-                    <div>
-                        <h3 class="project">EatsYYC</h3>
-                        <p>Platform type: Mobile app</p>
-                        <p>Description of the project: EatsYYC is a mobile app that allows users to find the restaurant that they have never visited before. Most of the restaurant listed on the app are locals</p>
-                    </div>
-                </section>
-
                 <!-- Languages and Tools -->
                 <section>
-                    <h2>Languages and Tools</h2>
+                    <h2>Technical Skills</h2>
                     <div class="skills-grid">
                         <div>
                             <h3>Front End</h3>
@@ -86,10 +76,25 @@
                         </div>
                     </div>
                 </section>
+
+                <!-- Projects -->
+                <section>
+                    <h2>Projects</h2>
+                    <div>
+                        <h3 class="project-link">EatsYYC</h3>
+                        <p>Platform type: Mobile app</p>
+                        <p>Description of the project: EatsYYC is a mobile app that allows users to find the restaurant that they have never visited before. Most of the restaurant listed on the app are locals</p>
+                        <p>Link: <a href="https://your-eatsyyc-link.com" class="link">EatsYYC</a></p>
+                    </div>
+                </section>
+
                 <footer>
                     <h2>Contact</h2>
-                    <p>LinkedIn page: <a href="https://www.linkedin.com/in/richard-v-8a5a19265/">Richard Vergara</a> 
-                        & Email: <a href="mailto:richarddeanvergara@gmail.com">Richarddeanvergara@gmail.com</a>
+                    <p class="contact">
+                        LinkedIn page: 
+                        <a href="https://www.linkedin.com/in/richard-v-8a5a19265/" class="link">Richard Vergara</a><br>
+                        Email: 
+                        <a href="mailto:richarddeanvergara@gmail.com" class="link">Richarddeanvergara@gmail.com</a>
                     </p>
                 </footer>
             </main>
