--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                                 <li>Expo Go</li>
                                 <li>NPM/Yarn</li>
                                 <li>Jupyter Notebook</li>
+                                <li>Power BI</li>
                             </ul>
                         </div>
                     </div>
