--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <li>Docker</li>
                                 <li>Excel</li>
                                 <li>PostMan</li>
-                                <li>Canvas</li>
+                                <li>Power BI</li>
                                 <li>Expo Go</li>
                                 <li>NPM/Yarn</li>
                                 <li>Jupyter Notebook</li>
